# tcp-messenger

./: API_USAGE_GUIDE.md  Cargo.toml  client.toml  enh.md  server-guide.md  server.toml  test_api.sh  test_upload.txt
src/: client.rs  config.rs  database.rs  file_transfer.rs  lib.rs  main.rs  server.rs  shutdown.rs
src/onewheel/: analysis.rs  api.rs  auth.rs  database.rs  mod.rs  models.rs
