[package]
name = "tcp-messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.7", features = ["v4"] }

