[package]
name = "tcp-messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.7", features = ["v4"] }
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
# File transfer and media handling
sha2 = "0.10"
base64 = "0.21"
mime = "0.3"
image = "0.24"
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["codec"] }
# OneWheel API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-postgres = "0.7"
thiserror = "1.0"

